--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 /* Гарантируем, что body и html занимают всю высоту */
 html,
 body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
+  font-display: swap;
 }
 
 /* Контейнер всего приложения */
