--- a/frontend/src/styles/Categories.module.css
+++ b/frontend/src/styles/Categories.module.css
@@ -45,6 +45,15 @@
   background-color: #f0f0f0; /* Фон на случай задержки загрузки */
 }
 
+/* Для имени категории */
+.categoryName {
+  font-size: 1.8rem; /* Размер шрифта */
+  font-weight: bold; /* Жирный шрифт */
+  color: #333; /* Цвет текста, контрастный для лучшей читаемости */
+  margin-bottom: 15px; /* Отступ снизу */
+  text-align: center; /* Выравнивание по центру */
+}
+
 /* 🔥 Скелетон для плавной загрузки */
 .skeletonItem {
   display: flex;
