--- a/frontend/src/styles/Categories.module.css
+++ b/frontend/src/styles/Categories.module.css
@@ -1,8 +1,8 @@
 /* Основные стили для контейнера и карточек */
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+  /* max-width: 1200px;
+  margin: 0 auto; */
   padding: 20px;
 }
 
