--- a/frontend/src/styles/Navbar.module.css
+++ b/frontend/src/styles/Navbar.module.css
@@ -185,6 +185,7 @@
   margin: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px;
 }
 
@@ -198,6 +199,15 @@
 
 .mobileMenu a:hover {
   background: #444;
+}
+
+/* Стили для полосы-разделителя */
+.mobileMenu hr {
+  border: 0;
+  height: 1px;
+  background-color: #444;
+  width: 80%;
+  margin: 10px 0;
 }
 
 @media (max-width: 768px) {
