--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -14,7 +14,7 @@
 
 .productGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(4, 1fr); /* 3 карточки на больших экранах */
   gap: 20px;
   justify-content: center;
 }
@@ -49,7 +49,7 @@
 
 .productName {
   font-size: 16px;
-  font-weight: bold;
+  /* font-weight: bold; */
   margin: 10px 0;
 }
 
