--- a/frontend/src/styles/CategoryPage.module.css
+++ b/frontend/src/styles/CategoryPage.module.css
@@ -67,7 +67,7 @@
 
 .productPrice {
   font-weight: bold;
-  color: #d9534f;
+  color: #c12e2a; /* Темно-красный цвет */
   margin-top: 10px; /* Больше пространства между ценой и названием */
 }
 
