--- a/frontend/src/styles/ViewedProducts.module.css
+++ b/frontend/src/styles/ViewedProducts.module.css
@@ -1,20 +1,20 @@
-.container {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
+.viewedProductsSection {
+  margin-top: 40px;
 }
 
 .title {
   font-size: 24px;
   font-weight: bold;
+}
+
+.viewedProductsSection h2 {
   text-align: center;
   margin-bottom: 20px;
 }
 
 .productGrid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr); /* 3 карточки на больших экранах */
+  grid-template-columns: repeat(4, 1fr); /* Показываем 4 карточки на больших экранах */
   gap: 20px;
   justify-content: center;
 }
@@ -49,7 +49,6 @@
 
 .productName {
   font-size: 16px;
-  /* font-weight: bold; */
   margin: 10px 0;
 }
 
@@ -59,8 +58,22 @@
   font-weight: bold;
 }
 
-.viewedProductsSection {
-  margin-top: 40px;
+.noImage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  background-color: #f1f1f1;
+  color: #888;
+  font-size: 14px;
+  text-align: center;
+  border-radius: 8px;
+}
+
+.noProducts {
+  text-align: center;
+  font-size: 16px;
+  color: #888;
 }
 
 /* Для мобильных устройств */
