--- a/frontend/src/styles/ProductDetails.module.css
+++ b/frontend/src/styles/ProductDetails.module.css
@@ -5,11 +5,19 @@
   margin: 20px;
 }
 
+.container {
+  display: flex;
+  max-width: 1200px; /* Ограничение максимальной ширины */
+  width: 100%;
+  margin: 0 auto; /* Центрирование */
+  padding: 20px;
+}
+
 .productInfo {
   display: flex;
   align-items: flex-start;
   gap: 20px;
-  max-width: 1200px;
+  width: 100%;
 }
 
 .thumbnailContainer {
@@ -87,4 +95,13 @@
 
 .addToCartButton:hover {
   background-color: #218838;
+}
+
+.section {
+  /* margin-top: 30px; */
+  width: 100%;
+  padding-left: 20px;
+  /* padding: 20px; */
+  /* background-color: #f9f9f9; */
+  /* border-radius: 8px; */
 }
