--- a/frontend/src/styles/ProductDetails.module.css
+++ b/frontend/src/styles/ProductDetails.module.css
@@ -63,7 +63,7 @@
   gap: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .sizeTypeButtons button {
