--- a/frontend/src/styles/ProductDetails.module.css
+++ b/frontend/src/styles/ProductDetails.module.css
@@ -62,7 +62,7 @@
   display: flex;
   gap: 10px;
   margin-top: 10px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   /* justify-content: center; */
 }
 
