--- a/frontend/src/styles/ProductDetails.module.css
+++ b/frontend/src/styles/ProductDetails.module.css
@@ -1,57 +1,12 @@
 .container {
-  /* display: flex; */
-  max-width: 1200px; /* Ограничение максимальной ширины */
+  max-width: 1200px;
   width: 100%;
-  margin: 0 auto; /* Центрирование */
+  margin: 0 auto;
   padding: 20px;
 }
 
 .productDetails {
   display: flex;
-}
-
-.productInfo {
-  display: flex;
-  align-items: flex-start;
-  gap: 20px;
-  width: 100%;
-}
-
-.thumbnailContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.thumbnailImage {
-  width: 60px;
-  height: 60px;
-  object-fit: cover;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: border 0.3s ease;
-}
-
-.thumbnailImage:hover {
-  border: 2px solid #333;
-}
-
-.mainImage {
-  max-width: 500px;
-  height: auto;
-}
-
-.mainImageDisplay {
-  width: 100%;
-  max-width: 500px;
-  height: auto;
-  display: block;
-  border-radius: 8px;
-}
-
-.noImage {
-  font-size: 16px;
-  color: #777;
 }
 
 .sizeTypeSection {
@@ -62,8 +17,6 @@
   display: flex;
   gap: 10px;
   margin-top: 10px;
-  /* margin-bottom: 10px; */
-  /* justify-content: center; */
 }
 
 .sizeTypeButtons button {
@@ -117,9 +70,6 @@
   color: #333;
 }
 
-/* Адаптивность для мобильных устройств */
-
-/* Для экранов меньше 768px (мобильные устройства) */
 @media (max-width: 768px) {
   .productDetails {
     display: flex;
