--- a/frontend/src/styles/SizeChart.module.css
+++ b/frontend/src/styles/SizeChart.module.css
@@ -53,9 +53,9 @@
 
 /* Кнопка показать/скрыть размеры */
 .toggleButton {
-  background-color: #3498db;
-  color: #fff;
-  border: none;
+  /* background-color: #3498db; */
+  color: black;
+  border: 1px solid black;
   padding: 10px 15px;
   font-size: 16px;
   cursor: pointer;
@@ -65,7 +65,8 @@
 }
 
 .toggleButton:hover {
-  background-color: #2980b9;
+  /* background-color: #f4f4f4; */
+  opacity: 0.7;
 }
 
 /* Контейнер с вертикальным списком размеров */
