--- a/frontend/src/styles/ProductDetails.module.css
+++ b/frontend/src/styles/ProductDetails.module.css
@@ -89,6 +89,8 @@
   .mobileTitle {
     display: flex;
     justify-content: center;
+    text-align: center;
+    padding-bottom: 10px;
   }
 
   .desktopTitle {
