--- a/frontend/src/styles/CategoryPage.module.css
+++ b/frontend/src/styles/CategoryPage.module.css
@@ -59,7 +59,7 @@
 /* Для имени продукта */
 .productName {
   padding-top: 10px;
-  font-size: 1.2rem; /* Размер шрифта */
+  font-size: 16px;
   /* font-weight: bold;  */
   color: #333; /* Цвет текста, контрастный для лучшей читаемости */
   margin-bottom: 10px; /* Отступ снизу */
@@ -142,6 +142,10 @@
 
   .productItem {
     padding: 10px; /* Уменьшаем паддинг карточек */
+  }
+
+  .productName {
+    font-size: 15px;
   }
 }
 
