--- a/frontend/src/styles/Cart.module.css
+++ b/frontend/src/styles/Cart.module.css
@@ -144,7 +144,7 @@
 .breadcrumbLink {
   text-decoration: none;
   /* color: #007bff; */
-  color: #0056b3;
+  /* color: #0056b3; */
   font-weight: bold;
 }
 
