--- a/frontend/src/styles/CategoryPage.module.css
+++ b/frontend/src/styles/CategoryPage.module.css
@@ -116,7 +116,7 @@
 
 .breadcrumbLink {
   text-decoration: none;
-  color: #0056b3;
+  /* color: #0056b3; */
   font-weight: bold;
   /* color: #007bff; */
 }
