--- a/frontend/src/styles/ProductDetails.module.css
+++ b/frontend/src/styles/ProductDetails.module.css
@@ -60,7 +60,7 @@
 
 .breadcrumbLink {
   text-decoration: none;
-  color: #0056b3;
+  /* color: #0056b3; */
   font-weight: bold;
   /* color: #007bff; */
 }
